--- a/broker/build.gradle
+++ b/broker/build.gradle
@@ -1,6 +1,4 @@
-archivesBaseName='xplanet-broker'
-
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    implementation project(':remoting')
+    implementation project(':storage')
 }
