--- a/remoting/build.gradle
+++ b/remoting/build.gradle
@@ -1,3 +1,5 @@
 dependencies {
-
+    implementation 'io.netty:netty-all'
+    implementation 'org.slf4j:slf4j-api'
+    //implementation 'org.springframework.boot:spring-boot-starter-logging'
 }
