--- a/dashboard/build.gradle
+++ b/dashboard/build.gradle
@@ -1,5 +1,6 @@
 apply plugin:'org.springframework.boot'
 
 dependencies {
+    implementation project(':remoting')
     implementation 'org.springframework.boot:spring-boot-starter-web'
 }
