--- a/remoting/build.gradle
+++ b/remoting/build.gradle
@@ -3,8 +3,8 @@ plugins {
 }
 
 dependencies {
-    implementation project(':common')
     api 'io.netty:netty-all'
     api 'org.slf4j:slf4j-api'
+    implementation 'com.fasterxml.jackson.core:jackson-databind'
     testImplementation 'org.springframework.boot:spring-boot-starter-logging'
 }
