--- a/connector/build.gradle
+++ b/connector/build.gradle
@@ -1,3 +1,4 @@
 dependencies {
     implementation project(':remoting')
+    implementation 'org.springframework.boot:spring-boot-starter-logging'
 }
